--- a/wavelaunchos/package.json
+++ b/wavelaunchos/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --write .",
@@ -13,6 +13,7 @@
     "prisma:seed": "pnpm exec tsx prisma/seed.ts",
     "prisma:studio": "prisma studio"
   },
+  "postinstall": "prisma generate",
   "dependencies": {
     "@auth/prisma-adapter": "^2.11.1",
     "@dnd-kit/core": "^6.3.1",
